# RetroFun

./: add_files_to_xcode.rb  add_laines_lib_header.rb  build_log.txt  clean_xcode_cache.sh  clean_xcode_references.rb  cleanup_ios_sources.py  cleanup_xcode.py  configure_headers.rb  fix_includes.py  fix_ios_includes.py  fix_lib_includes.py  fix_xcode_resources.rb  inspect_xcode.rb  readd_source_files.rb  remove_duplicates.rb  remove_junk_files.py  settings.gradle.kts  simplify_to_nes.sh  sync_ios.py
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/assets/roms/: demo_nes_game.nes
composeApp/src/androidMain/cpp/: CMakeLists.txt  emulator_context.cpp  emulator_core.hpp  ios_bridge.h  native-lib.cpp
composeApp/src/androidMain/cpp/laines/src/: cpu.cpp
composeApp/src/androidMain/cpp/laines/src/include/: apu.hpp  gui.hpp
composeApp/src/androidMain/kotlin/org/retrofun/project/: MainActivity.kt  Platform.android.kt  RetroFunApplication.kt
composeApp/src/androidMain/kotlin/org/retrofun/project/data/audio/: AudioPlayer.kt
composeApp/src/androidMain/kotlin/org/retrofun/project/data/emulation/: AndroidEmulatorEngine.kt
composeApp/src/androidMain/kotlin/org/retrofun/project/data/loader/: AndroidRomLoader.kt
composeApp/src/androidMain/kotlin/org/retrofun/project/di/: AndroidModule.kt
composeApp/src/androidMain/kotlin/org/retrofun/project/emulation/nes/: platform.kt
composeApp/src/androidMain/kotlin/org/retrofun/project/presentation/util/: FilePicker.kt  VideoFrameExt.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/org/retrofun/project/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/kotlin/org/retrofun/project/data/repository/: GameRepositoryImpl.kt
composeApp/src/commonMain/kotlin/org/retrofun/project/di/: KoinModule.kt
composeApp/src/commonMain/kotlin/org/retrofun/project/emulation/: KotlinNesEngine.kt
composeApp/src/commonMain/kotlin/org/retrofun/project/emulation/nes/: APU.kt  (+27 more)
composeApp/src/commonTest/kotlin/org/retrofun/project/: ComposeAppCommonTest.kt
composeApp/src/iosMain/cinterop/: retrofun.def
composeApp/src/iosMain/kotlin/org/retrofun/project/: MainViewController.kt  Platform.ios.kt
composeApp/src/iosMain/kotlin/org/retrofun/project/di/: KoinIOS.kt
gradle/: libs.versions.toml
iosApp/: emulator_context.cpp  genesis_core.hpp  ios_bridge.cpp
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: emulator_context.cpp  emulator_context.hpp  genesis_core.hpp  ios_bridge.cpp  ios_bridge.h  nes_core.hpp  osd.h
iosApp/iosApp.xcodeproj/: project.pbxproj  project.pbxproj.backup  project.pbxproj.bak
iosApp/iosApp/laines/lib/: Nes_Apu.cpp
iosApp/iosApp/laines/src/: apu.cpp  cartridge.cpp  mapper.cpp
iosApp/iosApp/laines/src/include/: cartridge.hpp  gui.hpp
(+16 files in other folders)
